intro done. Started about us part

--- a/feeka-web/src/index.html
+++ b/feeka-web/src/index.html
@@ -6,6 +6,7 @@
     <title>Feeka</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Comfortaa" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet"> 
     <link rel="stylesheet" type="text/css" media="screen" href="main.css">
     <script src="main.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -14,6 +15,37 @@
     <nav>
         <button type="button" class="btn btn-primary">Bootstrap test</button>
     </nav>
+
+    <div class="container" id="company-intro">
+        <div class="row">
+            <div class="col-md-6">
+                <h1 class="title-purple" id="main-title">Lorem ipsum dolor sit amet, elit.</h1>
+                <p class="text-yellow"  id="company-paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nisi nisl, mollis eget lacus eget, consequat pulvinar sapien. Donec tincidunt sed nibh et commodo. Aliquam placerat iaculis euismod.</p>
+            </div>
+            <div class="col-md-6">
+              <img src="assets/ilustracaoHero.png" alt="ilustração hero">
+            </div>
+          </div>
+    </div>
+
+    <div class="container" id="about-us">
+        <div class="row">
+            <div class="col-md-12">
+                <h1 class="title-purple">about us</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nisi nisl, mollis eget lacus eget, consequat pulvinar sapien. Donec tincidunt sed nibh et commodo. Aliquam placerat iaculis euismod. Phasellus arcu justo, scelerisque auctor placerat in, viverra non elit. Mauris non nulla</p>
+            </div>
+            </div>
+    </div>
+
+    <div class="container" id="about-us">
+        <div class="row">
+            <div class="col-md-12">
+                <h1 class="title-purple">about us</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nisi nisl, mollis eget lacus eget, consequat pulvinar sapien. Donec tincidunt sed nibh et commodo. Aliquam placerat iaculis euismod. Phasellus arcu justo, scelerisque auctor placerat in, viverra non elit. Mauris non nulla</p>
+            </div>
+            </div>
+    </div>
+
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
