missing some last finishing toches on the about us part

--- a/feeka-web/src/index.html
+++ b/feeka-web/src/index.html
@@ -37,13 +37,36 @@
             </div>
     </div>
 
-    <div class="container" id="about-us">
+    <div class="container" id="about-us-parts">
         <div class="row">
-            <div class="col-md-12">
-                <h1 class="title-purple">about us</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nisi nisl, mollis eget lacus eget, consequat pulvinar sapien. Donec tincidunt sed nibh et commodo. Aliquam placerat iaculis euismod. Phasellus arcu justo, scelerisque auctor placerat in, viverra non elit. Mauris non nulla</p>
+            <div class="col-md-4">
+                <div class="card" style="width: 18rem;">
+                    <img src="..." class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Software Engineering</h5>
+                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nisi nisl, mollis eget lacus eget, consequat pulvinar sapien. Donec tincidunt sed nibh et commodo. Aliquam placerat</p>
+                    </div>
+                </div>
             </div>
+            <div class="col-md-4">
+                <div class="card" style="width: 18rem;">
+                    <img src="..." class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Business</h5>
+                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nisi nisl, mollis eget lacus eget, consequat pulvinar sapien. Donec tincidunt sed nibh et commodo. Aliquam placerat</p>
+                    </div>
+                </div>
             </div>
+            <div class="col-md-4">
+                <div class="card" style="width: 18rem;">
+                    <img src="..." class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Multimedia</h5>
+                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nisi nisl, mollis eget lacus eget, consequat pulvinar sapien. Donec tincidunt sed nibh et commodo. Aliquam placerat</p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
 
