about us done, and everything is responsive. Waiting for the answer regarding the cards height

--- a/feeka-web/src/index.html
+++ b/feeka-web/src/index.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Feeka</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Comfortaa" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css">
     <script src="main.js"></script>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
+
 <body>
     <nav>
         <button type="button" class="btn btn-primary">Bootstrap test</button>
@@ -18,51 +21,61 @@
 
     <div class="container" id="company-intro">
         <div class="row">
-            <div class="col-md-6">
+            <div class="col-lg-6 col-md-12 col-12 order-lg-1 order-md-2 order-2">
                 <h1 class="title-purple" id="main-title">Lorem ipsum dolor sit amet, elit.</h1>
-                <p class="text-yellow"  id="company-paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nisi nisl, mollis eget lacus eget, consequat pulvinar sapien. Donec tincidunt sed nibh et commodo. Aliquam placerat iaculis euismod.</p>
+                <p class="text-yellow" id="company-paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Sed nisi nisl, mollis eget lacus eget, consequat pulvinar sapien. Donec tincidunt sed nibh et
+                    commodo. Aliquam placerat iaculis euismod.</p>
             </div>
-            <div class="col-md-6">
-              <img src="assets/ilustracaoHero.png" alt="ilustração hero">
+            <div class="col-lg-6 col-md-12 col-12 order-lg-2 order-md-1 order-1">
+                <img src="assets/ilustracaoHero.png" alt="ilustração hero">
             </div>
-          </div>
+        </div>
     </div>
 
     <div class="container" id="about-us">
         <div class="row">
             <div class="col-md-12">
                 <h1 class="title-purple">about us</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nisi nisl, mollis eget lacus eget, consequat pulvinar sapien. Donec tincidunt sed nibh et commodo. Aliquam placerat iaculis euismod. Phasellus arcu justo, scelerisque auctor placerat in, viverra non elit. Mauris non nulla</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nisi nisl, mollis eget lacus eget,
+                    consequat pulvinar sapien. Donec tincidunt sed nibh et commodo. Aliquam placerat iaculis euismod.
+                    Phasellus arcu justo, scelerisque auctor placerat in, viverra non elit. Mauris non nulla</p>
             </div>
-            </div>
+        </div>
     </div>
 
     <div class="container" id="about-us-parts">
         <div class="row">
-            <div class="col-md-4">
-                <div class="card" style="width: 18rem;">
-                    <img src="..." class="card-img-top" alt="...">
+            <div class="col-lg-4 col-md-12">
+                <div class="card">
+                    <img src="assets/image_placeholder.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Software Engineering</h5>
-                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nisi nisl, mollis eget lacus eget, consequat pulvinar sapien. Donec tincidunt sed nibh et commodo. Aliquam placerat</p>
+                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nisi nisl,
+                            mollis eget lacus eget, consequat pulvinar sapien. Donec tincidunt sed nibh et commodo.
+                            Aliquam placerat</p>
                     </div>
                 </div>
             </div>
-            <div class="col-md-4">
-                <div class="card" style="width: 18rem;">
-                    <img src="..." class="card-img-top" alt="...">
+            <div class="col-lg-4 col-md-12">
+                <div class="card">
+                    <img src="assets/image_placeholder.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Business</h5>
-                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nisi nisl, mollis eget lacus eget, consequat pulvinar sapien. Donec tincidunt sed nibh et commodo. Aliquam placerat</p>
+                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nisi nisl,
+                            mollis eget lacus eget, consequat pulvinar sapien. Donec tincidunt sed nibh et commodo.
+                            Aliquam placerat</p>
                     </div>
                 </div>
             </div>
-            <div class="col-md-4">
-                <div class="card" style="width: 18rem;">
-                    <img src="..." class="card-img-top" alt="...">
+            <div class="col-lg-4 col-md-12">
+                <div class="card">
+                    <img src="assets/image_placeholder.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Multimedia</h5>
-                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nisi nisl, mollis eget lacus eget, consequat pulvinar sapien. Donec tincidunt sed nibh et commodo. Aliquam placerat</p>
+                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nisi nisl,
+                            mollis eget lacus eget, consequat pulvinar sapien. Donec tincidunt sed nibh et commodo.
+                            Aliquam placerat</p>
                     </div>
                 </div>
             </div>
@@ -72,8 +85,15 @@
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
