Added same height to cards

--- a/feeka-web/src/index.html
+++ b/feeka-web/src/index.html
@@ -45,7 +45,7 @@
     </div>
 
     <div class="container" id="about-us-parts">
-        <div class="row">
+        <div class="row row-eq-height">
             <div class="col-lg-4 col-md-12">
                 <div class="card">
                     <img src="assets/image_placeholder.jpg" class="card-img-top" alt="...">
