--- a/feeka-web/src/index.html
+++ b/feeka-web/src/index.html
@@ -17,10 +17,13 @@
     <main>
         <div class="morph-wrap">
             <svg class="morph" width="1400" height="770" viewBox="0 0 1400 770">
-                <path d="M 262.9,252.2 C 210.1,338.2 212.6,487.6 288.8,553.9 372.2,626.5 511.2,517.8 620.3,536.3 750.6,558.4 860.3,723 987.3,686.5 1089,657.3 1168,534.7 1173,429.2 1178,313.7 1096,189.1 995.1,130.7 852.1,47.07 658.8,78.95 498.1,119.2 410.7,141.1 322.6,154.8 262.9,252.2 Z"/>
+                <path d="M753.857,3078.2s-6.19,224.1,148.437,264.993,404.168-20.456,571.334,18.121,383.195,131.161,673.806,105.443,526.874-123.564,526.874-123.564l-.41,451.25s-204.552,176.935-438.583,122.928-748.827-358.031-867.129-275.734-339.545,219.93-480.743,152.806-133.585-177.837-133.585-177.837Z"/>
             </svg>
         </div>
         <div class="content content--fixed">
+        </div>
+        <div class="content-wrap">
+            <h2>About us goes here</h2>
         </div>
         <div class="content-wrap">
             <h2>Project 1 goes here</h2>
@@ -31,12 +34,10 @@
         <div class="content-wrap">
             <h2>Project 3 goes here</h2>
         </div>
-        <div class="content-wrap">
-            <h2>Project 4 goes here</h2>
-        </div>
         <!-- Related demos -->
         <section class="content content--related">
-            <p class="content__info">If you enjoyed this demo you might also like:</p>
+            <h2>Project 4 goes here</h2>
+            <p class="content__info"></p>
             <a class="content__related-item" href="https://tympanus.net/Development/ElasticSVGElements/">
             </a>
             <a class="content__related-item" href="https://tympanus.net/Development/ItemRevealer/">
