Projects section complete

--- a/feeka-web/src/index.html
+++ b/feeka-web/src/index.html
@@ -26,17 +26,81 @@
             <h2>About us goes here</h2>
         </div>
         <div class="content-wrap">
-            <h2>Project 1 goes here</h2>
+            <div class="row">
+                <div class="col-1"></div>
+                <div class="col-5 d-flex align-items-center bordeR">
+                    <img class="mx-auto d-block W-75 img-fluid" src="http://www.criticalmanufacturing.com/uploads/resources/A_20140704152359.png"></img>
+                </div>
+                <div class="col-4 d-flex h-100 pr-5">
+                    <div class="container justify-content-center align-self-center">
+                        <h2>Quarere</h2>
+                        <p>
+                            TLorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nisi nisl, mollis eget lacus eget, consequat pulvinar sapien. Donec tincidunt sed nibh et commodo. Aliquam placerat iaculis euismod. Phasellus arcu justo, scelerisque auctor placerat in, viverra non elit. Mauris non nulla vitae lectus tincidunt sollicitudin nec ut elit. Cras lobortis porttitor volutpat. Donec faucibus et metus nec iaculis.
+                        </p>
+                        <button type="button" class="btn btn-primary">details</button>
+                    </div>
+                </div>
+                <div class="col-2"></div>
+            </div>
         </div>
         <div class="content-wrap">
-            <h2>Project 2 goes here</h2>
+            <div class="row">
+                <div class="col-2"></div>
+                <div class="col-4 d-flex h-100 pr-5">
+                    <div class="container justify-content-center align-self-center">
+                        <h2>Sonae</h2>
+                        <p>
+                            TLorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nisi nisl, mollis eget lacus eget, consequat pulvinar sapien. Donec tincidunt sed nibh et commodo. Aliquam placerat iaculis euismod. Phasellus arcu justo, scelerisque auctor placerat in, viverra non elit. Mauris non nulla vitae lectus tincidunt sollicitudin nec ut elit. Cras lobortis porttitor volutpat. Donec faucibus et metus nec iaculis.
+                        </p>
+                        <button type="button" class="btn btn-primary">details</button>
+                    </div>
+                </div>
+                <div class="col-5 d-flex align-items-center bordeR">
+                    <img class="mx-auto d-block W-75 img-fluid" src="http://www.criticalmanufacturing.com/uploads/resources/A_20140704152359.png"></img>
+                </div>
+                <div class="col-1"></div>
+            </div>
         </div>
         <div class="content-wrap">
-            <h2>Project 3 goes here</h2>
+            <div class="row">
+                <div class="col-1"></div>
+                <div class="col-5 d-flex align-items-center bordeR">
+                    <img class="mx-auto d-block W-75 img-fluid" src="http://www.criticalmanufacturing.com/uploads/resources/A_20140704152359.png"></img>
+                </div>
+                <div class="col-4 d-flex h-100 pr-5">
+                    <div class="container justify-content-center align-self-center">
+                        <h2>Critical</h2>
+                        <p>
+                            TLorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nisi nisl, mollis eget lacus eget, consequat pulvinar sapien. Donec tincidunt sed nibh et commodo. Aliquam placerat iaculis euismod. Phasellus arcu justo, scelerisque auctor placerat in, viverra non elit. Mauris non nulla vitae lectus tincidunt sollicitudin nec ut elit. Cras lobortis porttitor volutpat. Donec faucibus et metus nec iaculis.
+                        </p>
+                        <button type="button" class="btn btn-primary">details</button>
+                    </div>
+                </div>
+                <div class="col-2"></div>
+            </div>
         </div>
+        <div class="content-wrap">
+            <div class="row">
+                <div class="col-2"></div>
+                <div class="col-4 d-flex h-100 pr-5">
+                    <div class="container justify-content-center align-self-center">
+                        <h2>ZeroZero</h2>
+                        <p>
+                            TLorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nisi nisl, mollis eget lacus eget, consequat pulvinar sapien. Donec tincidunt sed nibh et commodo. Aliquam placerat iaculis euismod. Phasellus arcu justo, scelerisque auctor placerat in, viverra non elit. Mauris non nulla vitae lectus tincidunt sollicitudin nec ut elit. Cras lobortis porttitor volutpat. Donec faucibus et metus nec iaculis.
+                        </p>
+                        <button type="button" class="btn btn-primary">details</button>
+                    </div>
+                </div>
+                <div class="col-5 d-flex align-items-center bordeR">
+                    <img class="mx-auto d-block W-75 img-fluid" src="http://www.criticalmanufacturing.com/uploads/resources/A_20140704152359.png"></img>
+                </div>
+                <div class="col-1"></div>
+            </div>
+        </div>
+        
         <!-- Related demos -->
         <section class="content content--related">
-            <h2>Project 4 goes here</h2>
+            <h2>Last item</h2>
             <p class="content__info"></p>
             <a class="content__related-item" href="https://tympanus.net/Development/ElasticSVGElements/">
             </a>
