--- a/feeka-web/src/index.html
+++ b/feeka-web/src/index.html
@@ -7,6 +7,7 @@
     <title>Feeka</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Comfortaa" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css">
     <script src="main.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -31,46 +32,44 @@
         crossorigin="anonymous"></script>
 
     <!-- Footer -->
-    <footer class="page-footer font-small mdb-color pt-4">
-        <div class="text-center text-md-left">
-            <div class="row text-center text-md-left mt-3 pb-3">
+    <footer class="page-footer">
+        <div class="d-flex justify-content-around align-items-center py-4">
 
-                <!-- Grid column -->
-                <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
-                    <img src="#">
-                </div>
-                <!-- Grid column -->
-
-                <!-- Grid column -->
-                <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3 d-flex">
-                    <div class="mr-4">
-                        <h6 class="mb-4 font-weight-bold">navigation</h6>
-                        <p>
-                            <a href="#!">home</a>
-                        </p>
-                        <p>
-                            <a href="#!">about us</a>
-                        </p>
-                        <p>
-                            <a href="#!">projects</a>
-                        </p>
-                        <p>
-                            <a href="#!">contact</a>
-                        </p>
-                    </div>
-
-                    <div class="ml-4">
-                        <h6 class="mb-4 font-weight-bold">contact</h6>
-                        <p>
-                            s/n, R. Dr. Roberto Frias, 4200-465 Porto, Portugal</p>
-                        <p>
-                            contacto@feeka.com</p>
-                        <p>
-                            +351 928 249 321</p>
-                    </div>
-                </div>
-
+            <!-- Grid column -->
+            <div class="footer-logo d-flex justify-content-center">
+                <img src="assets/LogoFooter.png">
             </div>
+            <!-- Grid column -->
+
+            <!-- Grid column -->
+            <div class="footer-info d-flex">
+                <div class="footer-navigation mr-5">
+                    <h6 class="footer-title mb-3">navigation</h6>
+                    <p>
+                        <a href="#!">home</a>
+                    </p>
+                    <p>
+                        <a href="#!">about us</a>
+                    </p>
+                    <p>
+                        <a href="#!">projects</a>
+                    </p>
+                    <p>
+                        <a href="#!">contact</a>
+                    </p>
+                </div>
+
+                <div class="footer-contact text-wrap">
+                    <h6 class="footer-title mb-3">contact</h6>
+                    <p>
+                        R. Dr. Roberto Frias, 4200-465 Porto, Portugal</p>
+                    <p>
+                        contacto@feeka.com</p>
+                    <p>
+                        +351 928 249 321</p>
+                </div>
+            </div>
+
         </div>
 
     </footer>
