title color fix

--- a/feeka-web/src/index.html
+++ b/feeka-web/src/index.html
@@ -106,7 +106,7 @@
                 </div>
                 <div class="col-4 d-flex h-100 pr-5">
                     <div class="container justify-content-center align-self-center">
-                        <h2>Quarere</h2>
+                        <h2 class="title-purple">Quarere</h2>
                         <p>
                             TLorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nisi nisl, mollis eget lacus
                             eget, consequat pulvinar sapien. Donec tincidunt sed nibh et commodo. Aliquam placerat
@@ -125,7 +125,7 @@
                 <div class="col-2"></div>
                 <div class="col-4 d-flex h-100 pr-5">
                     <div class="container justify-content-center align-self-center">
-                        <h2>Sonae</h2>
+                        <h2 class="title-purple">Sonae</h2>
                         <p>
                             TLorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nisi nisl, mollis eget lacus
                             eget, consequat pulvinar sapien. Donec tincidunt sed nibh et commodo. Aliquam placerat
@@ -152,7 +152,7 @@
                 </div>
                 <div class="col-4 d-flex h-100 pr-5">
                     <div class="container justify-content-center align-self-center">
-                        <h2>Critical</h2>
+                        <h2 class="title-purple">Critical</h2>
                         <p>
                             TLorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nisi nisl, mollis eget lacus
                             eget, consequat pulvinar sapien. Donec tincidunt sed nibh et commodo. Aliquam placerat
@@ -171,7 +171,7 @@
                 <div class="col-2"></div>
                 <div class="col-4 d-flex h-100 pr-5">
                     <div class="container justify-content-center align-self-center">
-                        <h2>ZeroZero</h2>
+                        <h2 class="title-purple">ZeroZero</h2>
                         <p>
                             TLorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nisi nisl, mollis eget lacus
                             eget, consequat pulvinar sapien. Donec tincidunt sed nibh et commodo. Aliquam placerat
