Added scrolling effect

--- a/feeka-web/src/index.html
+++ b/feeka-web/src/index.html
@@ -11,6 +11,7 @@
     <script src="js/main.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="main.css">
 </head>
 
@@ -100,11 +101,11 @@
             </div>
             <div class="row">
                 <div class="col-1"></div>
-                <div class="col-5 d-flex align-items-center bordeR">
+                <div class="col-5 d-flex align-items-center" data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-cubic" data-aos-duration="500">
                     <img class="mx-auto d-block W-75 img-fluid"
                         src="http://www.criticalmanufacturing.com/uploads/resources/A_20140704152359.png"></img>
                 </div>
-                <div class="col-4 d-flex h-100 pr-5">
+                <div class="col-4 d-flex h-100 pr-5" data-aos="fade-left" data-aos-offset="300" data-aos-easing="ease-in-cubic" data-aos-duration="500">
                     <div class="container justify-content-center align-self-center">
                         <h2 class="title-purple">Quarere</h2>
                         <p>
@@ -123,7 +124,7 @@
         <div class="content-wrap">
             <div class="row">
                 <div class="col-2"></div>
-                <div class="col-4 d-flex h-100 pr-5">
+                <div class="col-4 d-flex h-100 pr-5" data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-cubic" data-aos-duration="500">
                     <div class="container justify-content-center align-self-center">
                         <h2 class="title-purple">Sonae</h2>
                         <p>
@@ -136,7 +137,7 @@
                         <button type="button" class="btn btn-primary">details</button>
                     </div>
                 </div>
-                <div class="col-5 d-flex align-items-center bordeR">
+                <div class="col-5 d-flex align-items-center" data-aos="fade-left" data-aos-offset="300" data-aos-easing="ease-in-cubic" data-aos-duration="500">
                     <img class="mx-auto d-block W-75 img-fluid"
                         src="http://www.criticalmanufacturing.com/uploads/resources/A_20140704152359.png"></img>
                 </div>
@@ -146,11 +147,11 @@
         <div class="content-wrap">
             <div class="row">
                 <div class="col-1"></div>
-                <div class="col-5 d-flex align-items-center bordeR">
+                <div class="col-5 d-flex align-items-center" data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-cubic" data-aos-duration="500">
                     <img class="mx-auto d-block W-75 img-fluid"
                         src="http://www.criticalmanufacturing.com/uploads/resources/A_20140704152359.png"></img>
                 </div>
-                <div class="col-4 d-flex h-100 pr-5">
+                <div class="col-4 d-flex h-100 pr-5" data-aos="fade-left" data-aos-offset="300" data-aos-easing="ease-in-cubic" data-aos-duration="500">
                     <div class="container justify-content-center align-self-center">
                         <h2 class="title-purple">Critical</h2>
                         <p>
@@ -169,7 +170,7 @@
         <div class="content-wrap">
             <div class="row">
                 <div class="col-2"></div>
-                <div class="col-4 d-flex h-100 pr-5">
+                <div class="col-4 d-flex h-100 pr-5" data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-cubic" data-aos-duration="500">
                     <div class="container justify-content-center align-self-center">
                         <h2 class="title-purple">ZeroZero</h2>
                         <p>
@@ -182,7 +183,7 @@
                         <button type="button" class="btn btn-primary">details</button>
                     </div>
                 </div>
-                <div class="col-5 d-flex align-items-center bordeR">
+                <div class="col-5 d-flex align-items-center" data-aos="fade-left" data-aos-offset="300" data-aos-easing="ease-in-cubic" data-aos-duration="500">
                     <img class="mx-auto d-block W-75 img-fluid"
                         src="http://www.criticalmanufacturing.com/uploads/resources/A_20140704152359.png"></img>
                 </div>
@@ -235,6 +236,10 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 
 </html>
