--- a/feeka-web/src/index.html
+++ b/feeka-web/src/index.html
@@ -7,8 +7,26 @@
     <title>Feeka</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="js/main.js"></script>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+        integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css"
+        integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+        integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+        integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+        crossorigin="anonymous"></script>
+
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="style.css">
 </head>
@@ -99,11 +117,13 @@
             </div>
             <div class="row">
                 <div class="col-1"></div>
-                <div class="col-5 d-flex align-items-center" data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-cubic" data-aos-duration="500">
+                <div class="col-5 d-flex align-items-center" data-aos="fade-right" data-aos-offset="300"
+                    data-aos-easing="ease-in-cubic" data-aos-duration="500">
                     <img class="mx-auto d-block W-75 img-fluid"
                         src="http://www.criticalmanufacturing.com/uploads/resources/A_20140704152359.png"></img>
                 </div>
-                <div class="col-4 d-flex h-100 pr-5" data-aos="fade-left" data-aos-offset="300" data-aos-easing="ease-in-cubic" data-aos-duration="500">
+                <div class="col-4 d-flex h-100 pr-5" data-aos="fade-left" data-aos-offset="300"
+                    data-aos-easing="ease-in-cubic" data-aos-duration="500">
                     <div class="container justify-content-center align-self-center">
                         <h2 class="title-purple">Quarere</h2>
                         <p>
@@ -122,7 +142,8 @@
         <div class="content-wrap">
             <div class="row">
                 <div class="col-2"></div>
-                <div class="col-4 d-flex h-100 pr-5" data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-cubic" data-aos-duration="500">
+                <div class="col-4 d-flex h-100 pr-5" data-aos="fade-right" data-aos-offset="300"
+                    data-aos-easing="ease-in-cubic" data-aos-duration="500">
                     <div class="container justify-content-center align-self-center">
                         <h2 class="title-purple">Sonae</h2>
                         <p>
@@ -135,7 +156,8 @@
                         <button type="button" class="btn btn-primary">details</button>
                     </div>
                 </div>
-                <div class="col-5 d-flex align-items-center" data-aos="fade-left" data-aos-offset="300" data-aos-easing="ease-in-cubic" data-aos-duration="500">
+                <div class="col-5 d-flex align-items-center" data-aos="fade-left" data-aos-offset="300"
+                    data-aos-easing="ease-in-cubic" data-aos-duration="500">
                     <img class="mx-auto d-block W-75 img-fluid"
                         src="http://www.criticalmanufacturing.com/uploads/resources/A_20140704152359.png"></img>
                 </div>
@@ -145,11 +167,13 @@
         <div class="content-wrap">
             <div class="row">
                 <div class="col-1"></div>
-                <div class="col-5 d-flex align-items-center" data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-cubic" data-aos-duration="500">
+                <div class="col-5 d-flex align-items-center" data-aos="fade-right" data-aos-offset="300"
+                    data-aos-easing="ease-in-cubic" data-aos-duration="500">
                     <img class="mx-auto d-block W-75 img-fluid"
                         src="http://www.criticalmanufacturing.com/uploads/resources/A_20140704152359.png"></img>
                 </div>
-                <div class="col-4 d-flex h-100 pr-5" data-aos="fade-left" data-aos-offset="300" data-aos-easing="ease-in-cubic" data-aos-duration="500">
+                <div class="col-4 d-flex h-100 pr-5" data-aos="fade-left" data-aos-offset="300"
+                    data-aos-easing="ease-in-cubic" data-aos-duration="500">
                     <div class="container justify-content-center align-self-center">
                         <h2 class="title-purple">Critical</h2>
                         <p>
@@ -168,7 +192,8 @@
         <div class="content-wrap">
             <div class="row">
                 <div class="col-2"></div>
-                <div class="col-4 d-flex h-100 pr-5" data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-cubic" data-aos-duration="500">
+                <div class="col-4 d-flex h-100 pr-5" data-aos="fade-right" data-aos-offset="300"
+                    data-aos-easing="ease-in-cubic" data-aos-duration="500">
                     <div class="container justify-content-center align-self-center">
                         <h2 class="title-purple">ZeroZero</h2>
                         <p>
@@ -181,7 +206,8 @@
                         <button type="button" class="btn btn-primary">details</button>
                     </div>
                 </div>
-                <div class="col-5 d-flex align-items-center" data-aos="fade-left" data-aos-offset="300" data-aos-easing="ease-in-cubic" data-aos-duration="500">
+                <div class="col-5 d-flex align-items-center" data-aos="fade-left" data-aos-offset="300"
+                    data-aos-easing="ease-in-cubic" data-aos-duration="500">
                     <img class="mx-auto d-block W-75 img-fluid"
                         src="http://www.criticalmanufacturing.com/uploads/resources/A_20140704152359.png"></img>
                 </div>
