fixed banner and part of about (also nav)

--- a/feeka-web/src/index.html
+++ b/feeka-web/src/index.html
@@ -50,10 +50,10 @@
                         <a class="nav-link" href="#">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">About Us</a>
+                        <a class="nav-link" href="#About">About Us</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Team</a>
+                        <a class="nav-link disabled" href="#">Team</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Projects</a>
@@ -65,7 +65,27 @@
             </div>
         </nav>
     </header>
+
+
+    <div id="banner">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6 col-md-12 order-lg-1 order-2">
+                    <h1>Our bonds overcome challenges.</h1>
+                    <p>By combining technology, creativity, business, and good communication, we develop intelligent
+                        solutions for innovative projects.</p>
+                </div>
+                <div class="col-lg-6 col-md-12 order-lg-2 order-1">
+                    <img class="img-fluid" src="assets/ilustracaoHero.png" alt="ilustração hero">
+                </div>
+            </div>
+        </div>
+    </div>
+
     <main>
+
+        <!-- Shapes -->
+        <!--
         <div class="morph-wrap">
             <svg class="morph" width="1400" height="770" viewBox="0 0 1400 770">
                 <path
@@ -74,26 +94,14 @@
         </div>
         <div class="content content--fixed">
         </div>
-        <div class="content-wrap" id="company-intro">
-            <!-- <div class="row" id="company-intro">  -->
-            <div class="row">
-                <div class="col-lg-6 col-md-12 col-12 order-lg-1 order-md-2 order-2">
-                    <h1 class="title-purple" id="main-title">Lorem ipsum dolor sit amet, elit.</h1>
-                    <p class="text-yellow" id="company-paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing
-                        elit.
-                        Sed nisi nisl, mollis eget lacus eget, consequat pulvinar sapien. Donec tincidunt sed nibh et
-                        commodo. Aliquam placerat iaculis euismod.</p>
-                </div>
-                <div class="col-lg-6 col-md-12 col-12 order-lg-2 order-md-1 order-1">
-                    <img src="assets/ilustracaoHero.png" alt="ilustração hero">
-                </div>
-            </div>
+        -->
 
-
-            <!-- <div class="row" id="about-us"> -->
-            <div class="row" id="about-us">
-                <div class="col-md-12">
-                    <h1 class="title-purple">about us</h1>
+        <!-- Content -->
+        <div class="content-wrap">
+            <div id="about" class="section">
+                <a id="About"></a>
+                <div class="container">
+                    <h1>About Us</h1>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nisi nisl, mollis eget lacus eget,
                         consequat pulvinar sapien. Donec tincidunt sed nibh et commodo. Aliquam placerat iaculis
                         euismod.
@@ -101,8 +109,6 @@
                 </div>
             </div>
 
-
-            <!-- <div class="row row-eq-height" id="about-us-parts"> -->
             <div class="row row-eq-height" id="about-us-parts">
                 <div class="col-lg-4 col-md-12">
                     <div class="card">
@@ -138,6 +144,10 @@
                     </div>
                 </div>
             </div>
+        </div>
+
+        <!-- SOFIA IS HERE -->
+
         </div>
         <div class="content-wrap">
             <div class="row">
