Footer bug corrected

--- a/feeka-web/src/index.html
+++ b/feeka-web/src/index.html
@@ -257,7 +257,7 @@
 
         <div class="content content--related">
             <!-- Footer -->
-            <footer class="page-footer container">
+            <footer class="page-footer">
                 <div class="d-flex justify-content-around align-items-center py-4">
 
                     <div class="footer-logo d-flex justify-content-center">
